--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "axios": "^0.19.2",
     "babylonjs": "^4.1.0",
     "bulma": "^0.9.1",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
+    "express-recaptcha": "^5.0.2",
     "express-sslify": "^1.2.0",
     "glob": "^7.1.6",
     "jquery": "^3.5.0",
@@ -21,8 +23,7 @@
     "nodemailer": "^6.4.6",
     "nodemon": "^2.0.3",
     "path": "^0.12.7",
-    "three": "^0.116.1",
-    "dotenv": "^8.2.0"
+    "three": "^0.116.1"
   },
   "devDependencies": {
     "dotenv": "^8.2.0"
